--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,29 @@ body{
     font-family: 'Montserrat', sans-serif;
     margin: 0%;
     padding: 0%;
-    background-color: lightgray;
+    background-color: rgb(240, 244, 244);
     color: gray;
     font-weight: 0;
+}
+.romb{
+    height: 200px;
+    width: 200px;
+    background-color: tomato;
+    top:0vh;
+    right: 0vh;
+    position: absolute;
+    -webkit-clip-path: polygon(65% 0, 100% 0, 100% 80%, 0 55%);
+    clip-path: polygon(65% 0, 100% 0, 100% 80%, 0 55%);
+}
+.circle{
+    height: 220px;
+    width: 220px;
+    background-color: rgb(236, 224, 53);
+    bottom:-9vh;
+    left: -5vh;
+    position: absolute;
+    -webkit-clip-path: circle(50% at 50% 50%);
+clip-path: circle(50% at 50% 50%);
 }
 .main{
     display: flex;
@@ -42,8 +62,13 @@ body{
     border-bottom-right-radius: 9% 5%;
     width: 45.5vh;
     height: 80vh;
-    background-color: rgb(22, 231, 162);
     float: left;
+    color: white;
+    background-color: rgb(58, 177, 155);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .cont{
     font-size: 4vh;
@@ -58,10 +83,10 @@ body{
     justify-content: space-around;
 }
 .ring{
-    color: black;
+    color: gray;
     width: 6vh;
     height: 6vh;
-    border: 0.1vh solid black;
+    border: 0.1vh solid gray;
     border-radius: 50%;
     font-size: 1.8vh;
     font-weight: bold;
@@ -75,7 +100,7 @@ body{
     width: 6vh;
     height: 6vh;
     border: 0.1vh solid white;
-    background-color: black;
+    background-color: gray;
     border-radius: 50%;
     font-size: 1.8vh;
     font-weight: bold;
@@ -96,7 +121,7 @@ p{
     font-size: 1.2vh;
     color: lightgray;
     border: none;
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(240, 244, 244);
 }
 .phone{
     width: 34vh;
@@ -106,11 +131,11 @@ p{
     font-size: 1.2vh;
     color: lightgray;
     border: none;
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(240, 244, 244);
 }
 .type{
     width: 34vh;
-    height: 10vh;
+    height: 8vh;
     padding: 1vh;
     margin: 1vh;
     font-weight: bold;
@@ -123,4 +148,68 @@ a{
     text-decoration: none;
     color: gray;
     border-bottom: 0.2vh dashed lightgray;
+}
+.one{
+    width: 22vh;
+    height: 4.6vh;
+    margin-top: 3vh;
+    margin-bottom: 6vh;
+    background-color: rgb(58, 177, 155);
+    border: 0vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.6vh;
+    border-top-left-radius: 12% 50%;
+    border-top-right-radius: 12% 50%;
+    border-bottom-left-radius: 12% 50%;
+    border-bottom-right-radius: 12% 50%;
+}
+.one:hover{
+    width: 22vh;
+    height: 4.6vh;
+    margin-top: 3vh;
+    margin-bottom: 6vh;
+    background-color: rgb(58, 177, 155);
+    border: 0vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:0.2vh solid white;
+    color: white;
+    font-size: 1.6vh;
+    border-top-left-radius: 12% 50%;
+    border-top-right-radius: 12% 50%;
+    border-bottom-left-radius: 12% 50%;
+    border-bottom-right-radius: 12% 50%;
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3); 
+box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);
+}
+.lst{
+    margin-right: 7vh;
+    margin-left: 7vh;
+}
+.btn{
+    width: 12vh;
+    height: 4.6vh;
+    border: 0.2vh solid white;
+    color:white;
+    margin-top: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(58, 177, 155);
+    border-top-left-radius: 20% 50%;
+    border-top-right-radius: 20% 50%;
+    border-bottom-left-radius: 20% 50%;
+    border-bottom-right-radius: 20% 50%;
+}
+i.fas.fa-chevron-left{
+    font-size: 2.5vh;
+    color:white;
+}
+.cont2{
+    margin-top: 0vh;
+    font-size: 4vh;
 }
